mywork/force-app/main/default/objects/GA_Metrics__c/GA_Metrics__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds data to send to Google Analytics</description>
    <label>GA Metrics</label>
</CustomObject>