mywork/force-app/main/default/objects/GA_Metrics__c/fields/Data1__c.field-meta.xml
<CustomField>
    <fullName>Data1__c</fullName>
    <label>Data1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>