mywork/force-app/main/default/objects/GA_Metrics__c/fields/Data2__c.field-meta.xml
<CustomField>
    <fullName>Data2__c</fullName>
    <label>Data2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>