mywork/force-app/main/default/objects/GA_Metrics__c/fields/Data3__c.field-meta.xml
<CustomField>
    <fullName>Data3__c</fullName>
    <label>Data3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>